# music

./: .gitignore  Dockerfile  LICENSE  app.json  config.py  logs.txt  pyproject.toml  requirements.txt  setup  start
.github/: README.md
.github/workflows/: docker-build.yml
AnonXMusic/: __init__.py  __main__.py
AnonXMusic/core/: call.py  userbot.py
AnonXMusic/plugins/admins/: callback.py  skip.py
AnonXMusic/plugins/bot/: help.py  inline.py  start.py
AnonXMusic/plugins/misc/: autoleave.py  broadcast.py  ginfo.py
AnonXMusic/plugins/play/: play.py
AnonXMusic/plugins/sudo/: autoend.py  blchat.py  cookies.py  logger.py  restart.py
AnonXMusic/plugins/tools/: active.py  ai.py  dev.py  language.py
AnonXMusic/utils/: database.py  thumbnails.py
AnonXMusic/utils/decorators/: admins.py  language.py  play.py
AnonXMusic/utils/inline/: help.py  play.py  start.py
Cookies/: cookies.txt
cookies/: broooo.txt  cookie (1).txt  cookies (1) (2).txt  cookies (1) (9).txt  cookies (2).txt  cookies (4) (1).txt  cookies (7).txt  cookies.txt  cookiescutex.txt  logs.csv  m.youtube.com_cookies (1) (1).txt  m.youtube.com_cookies (1) (2).txt  m.youtube.com_cookies (1) (3).txt  m.youtube.com_cookies (1).txt  m.youtube.com_cookies (10).txt  m.youtube.com_cookies (11).txt  m.youtube.com_cookies (12).txt  m.youtube.com_cookies (2).txt  m.youtube.com_cookies (3) (1).txt  m.youtube.com_cookies (3) (2).txt  m.youtube.com_cookies (3).txt  m.youtube.com_cookies (4).txt  m.youtube.com_cookies (5).txt  m.youtube.com_cookies (6).txt  m.youtube.com_cookies (7).txt  m.youtube.com_cookies (8).txt  m.youtube.com_cookies (9).txt  m.youtube.com_cookies.txt  public cookies.txt  reh_cookies.txt
