[project]
name = "music"
version = "0.1.0"
description = "Music Bot repo"
readme = ".github/README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.4.0",
    "ffmpeg-python>=0.2.0",
    "gitpython>=3.1.40",
    "hachoir>=3.2.0",
    "heroku3>=5.2.0",
    "httpx>=0.27.0",
    "kurigram",
    "motor>=3.3.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pillow==12.0.0",
    "psutil>=5.9.0",
    "py-tgcalls==2.2.11",
    "pykeyboard>=0.1.5",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "speedtest-cli>=2.1.3",
    "spotipy>=2.23.0",
    "tgcrypto>=1.2.5 ; sys_platform != 'win32'",
    "unidecode>=1.3.0",
    "uvloop>=0.19.0 ; sys_platform != 'win32'",
    "yt-dlp>=2025.12.8",
    "yt-search-py>=1.0.0",
]

[dependency-groups]
dev = []

[tool.uv.sources]
kurigram = { git = "https://github.com/KurimuzonAkuma/kurigram", rev = "2edfcd9caad00b91126440cb7b88876a884920db" }
