[project]
name = "music"
version = "0.1.0"
description = "Music Bot repo"
readme = ".github/README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.5",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.4.0",
    "ffmpeg-python==0.2.0",
    "gitpython>=3.1.40",
    "hachoir>=3.2.0",
    "heroku3>=5.2.0",
    "httpx==0.28.1",
    "kurigram==2.2.19",
    "motor==3.7.1",
    "numpy==2.4.4",
    "opencv-python==4.13.0.92",
    "pillow==12.1.1",
    "psutil>=5.9.0",
    "py-tgcalls==2.2.11",
    "pymongo==4.16.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests==2.33.1",
    "speedtest-cli>=2.1.3",
    "spotipy==2.26.0",
    "tgcrypto>=1.2.5 ; sys_platform != 'win32'",
    "unidecode>=1.3.0",
    "uvloop>=0.19.0 ; sys_platform != 'win32'",
    "yt-dlp==2026.3.17",
    "yt-search-py==1.0.0",
]

[dependency-groups]
dev = []

[tool.uv]
exclude-dependencies = ["pyrogram"]
